--- a/Pages/Accueil.html
+++ b/Pages/Accueil.html
@@ -3,18 +3,19 @@
 <head> <!--indications de la page-->
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Abu Dhabi Travel</title> <!--titre de l'onglet-->
+  <title>Haspho's blog</title> <!--titre de l'onglet-->
 </head>
 
 
 
 <body> <!--corps de la page-->
   <header>
+<!--y aura une image de titre ici-->
 
   </header>
 
   <nav>
-    <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
+    <p> <a href="Quisuisje.html"></p><!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
   </nav>
 <h1>BIENVENUE CHERS AMIS</h1>
   <p>squalala nous sommes partis</p>
