Ajout des pages et liens (si ça marche)

--- a/Pages/abudhabi.html
+++ b/Pages/abudhabi.html
@@ -21,8 +21,8 @@
     <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
 
   </nav>
-<h1>BIENVENUE CHERS AMIS</h1>
-  <p>squalala nous sommes partis</p>
+<h1>La vie d'Abu Dhabi</h1>
+  <p>Ou vivais-je ? Comment vivais-je ?</p>
 
 
 
