--- a/Pages/dubai.html
+++ b/Pages/dubai.html
@@ -21,8 +21,8 @@
     <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
 
   </nav>
-<h1>BIENVENUE CHERS AMIS</h1>
-  <p>squalala nous sommes partis</p>
+<h1>La où la grandeur fait folie</h1>
+  <p>Bah pour le moment c'est fermé donc bon mdr</p>
 
 
 
