--- a/Pages/Quisuisje.html
+++ b/Pages/Quisuisje.html
@@ -3,7 +3,7 @@
 <head> <!--indications de la page-->
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Haspho's blog</title> <!--titre de l'onglet-->
+  <title>Abu Dhabi Life</title> <!--titre de l'onglet-->
 </head>
 
 
@@ -15,7 +15,10 @@
   </header>
 
   <nav>
-    <p></p><!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
+    <p><a href="Quisuisje.html">-About Me-</a></p>
+    <p><a href="abudhabi.html">- Abu Dhabi -</a></p>
+    <p><a href="dubai.html">- Dubai -</a></p><!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
+
   </nav>
 <h1>Mais voyons qui suis-je ???</h1>
   <p>Je suis une pastèque</p>
