--- a/Pages/dubai.html
+++ b/Pages/dubai.html
@@ -15,6 +15,7 @@
   </header>
 
   <nav>
+    <p><a href="Accueil.html">- Accueil -</a></p>
     <p><a href="Quisuisje.html">-About Me-</a></p>
     <p><a href="abudhabi.html">- Abu Dhabi -</a></p>
     <p><a href="dubai.html">- Dubai -</a></p>
