--- a/Pages/Accueil.html
+++ b/Pages/Accueil.html
@@ -14,7 +14,7 @@
 
   </header>
 
-  <nav class="navigation">
+  <nav>
     <p><a href="Accueil.html">- Accueil -</a></p>
     <p><a href="Quisuisje.html">-About Me-</a></p>
     <p><a href="abudhabi.html">- Abu Dhabi -</a></p>
