parce que les changements genre bordure etc

--- a/Pages/Accueil.html
+++ b/Pages/Accueil.html
@@ -11,6 +11,7 @@
 <body> <!--corps de la page-->
   <header>
 <!--y aura une image de titre ici-->
+    <h1>~Little adventuress~</h1>
 
   </header>
 
@@ -22,12 +23,15 @@
     <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
 
   </nav>
-<h1>BIENVENUE CHERS AMIS</h1>
-  <p>squalala nous sommes partis</p>
 
+<h1 class="titrearticle">-BIENVENUE CHERS AMIS-</h1>
+  <p class="tuesunparagrapheharry">Bienvenue sur ce petit blogue, qui raconte les aventures incroyables d'une simple française expatriée
+  aux Emirats Arabes unis</p>
+  <p>Hello there</p>
 
+<footer>
+  <!--ici ces les trucs qu'il y a en bas des pages genre les contacts-->
 
-</body>
-
+</footer>
 
 </html>
