--- a/Pages/Quisuisje.html
+++ b/Pages/Quisuisje.html
@@ -11,7 +11,7 @@
 <body> <!--corps de la page-->
   <header>
 <!--y aura une image de titre ici-->
-
+    <h1>~Little adventuress~</h1>
   </header>
 
   <nav>
@@ -21,8 +21,9 @@
     <p><a href="dubai.html">- Dubai -</a></p><!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
 
   </nav>
-<h1>Mais voyons qui suis-je ???</h1>
-  <p>Je suis une pastèque</p>
+
+<h1 class="titrearticle">The most important : wo I am ?</h1>
+  <p class="tuesunparagrapheharry">Je suis une pastèque</p>
 
 
 
