--- a/Pages/abudhabi.html
+++ b/Pages/abudhabi.html
@@ -11,7 +11,7 @@
 <body> <!--corps de la page-->
   <header>
 <!--y aura une image de titre ici-->
-
+    <h1>~Little adventuress~</h1>
   </header>
 
   <nav>
@@ -22,8 +22,9 @@
     <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
 
   </nav>
-<h1>La vie d'Abu Dhabi</h1>
-  <p>Ou vivais-je ? Comment vivais-je ?</p>
+
+<h1 class="titrearticle">-Abu Dhabi-</h1>
+  <p class="tuesunparagrapheharry">Ou vivais-je ? Comment vivais-je ?</p>
 
 
 
