--- a/Pages/dubai.html
+++ b/Pages/dubai.html
@@ -11,7 +11,7 @@
 <body> <!--corps de la page-->
   <header>
 <!--y aura une image de titre ici-->
-
+    <h1>~Little adventuress~</h1>
   </header>
 
   <nav>
@@ -22,8 +22,9 @@
     <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
 
   </nav>
-<h1>La où la grandeur fait folie</h1>
-  <p>Bah pour le moment c'est fermé donc bon mdr</p>
+
+<h1 class="titrearticle">Dubai</h1>
+  <p class="tuesunparagrapheharry">Eh ben on peut pas y aller parce que c'est fermé mdr</p>
 
 
 
