--- a/Pages/Quisuisje.html
+++ b/Pages/Quisuisje.html
@@ -18,8 +18,9 @@
     <p><a href="Accueil.html">- Accueil -</a></p>
     <p><a href="Quisuisje.html">-About Me-</a></p>
     <p><a href="abudhabi.html">- Abu Dhabi -</a></p>
-    <p><a href="dubai.html">- Dubai -</a></p><!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
-
+    <p><a href="dubai.html">- Dubai -</a></p>
+    <p><a href="conseils.html">- Conseils -</a></p>
+    <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
   </nav>
 
 <h1 class="titrearticle">The most important : wo I am ?</h1>
