--- a/Pages/conseils.html
+++ b/Pages/conseils.html
@@ -12,6 +12,7 @@
   <header>
 <!--y aura une image de titre ici-->
     <h1>~Little adventuress~</h1>
+
   </header>
 
   <nav>
@@ -19,17 +20,18 @@
     <p><a href="Quisuisje.html">-About Me-</a></p>
     <p><a href="abudhabi.html">- Abu Dhabi -</a></p>
     <p><a href="dubai.html">- Dubai -</a></p>
-    <p><a href="conseils.html">- Conseils -</a></p>
+    <p><a  href="conseils.html">- Conseils -</a></p>
     <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
 
   </nav>
 
-<h1 class="titrearticle">-ABU DHABI-</h1>
-  <p class="tuesunparagrapheharry">Ou vivais-je ? Comment vivais-je ?</p>
+<h1 class="titrearticle">-CONSEILS DE TOURISTE-</h1>
+  <p class="tuesunparagrapheharry">Ici sera réunis les petits tips de touriste</p>
+  <p>You are a chocolate, guys</p>
 
+<footer>
+  <!--ici ces les trucs qu'il y a en bas des pages genre les contacts-->
 
-
-</body>
-
+</footer>
 
 </html>
