--- a/Pages/dubai.html
+++ b/Pages/dubai.html
@@ -19,6 +19,7 @@
     <p><a href="Quisuisje.html">-About Me-</a></p>
     <p><a href="abudhabi.html">- Abu Dhabi -</a></p>
     <p><a href="dubai.html">- Dubai -</a></p>
+    <p><a  href="conseils.html">- Conseils -</a></p>
     <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
 
   </nav>
