--- a/Pages/Accueil.html
+++ b/Pages/Accueil.html
@@ -3,7 +3,7 @@
 <head> <!--indications de la page-->
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Abu Dhabi Life</title> <!--titre de l'onglet-->
+  <title>Little Adventuress</title> <!--titre de l'onglet-->
 </head>
 
 
@@ -11,23 +11,23 @@
 <body> <!--corps de la page-->
   <header>
 <!--y aura une image de titre ici-->
-    <h1>~Little adventuress~</h1>
+    <p><img src="images/blason.png" alt="Logo du site" id="Logo"></p>
+    <h1 class="titrepage">~Little adventuress~</h1>
+
 
   </header>
 
   <nav>
-    <p><a href="Accueil.html">- Accueil -</a></p>
+    <p><a href="Accueil.html">-Accueil-</a></p>
     <p><a href="Quisuisje.html">-About Me-</a></p>
-    <p><a href="abudhabi.html">- Abu Dhabi -</a></p>
-    <p><a href="dubai.html">- Dubai -</a></p>
-    <p><a href="conseils.html">- Conseils -</a></p>
-    <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
+    <p><a href="dubai.html">-Projets/hobbys-</a></p>
+    <p><a href="abudhabi.html">-Voyages-</a></p>
 
   </nav>
 
 <h1 class="titrearticle">-BIENVENUE CHERS AMIS-</h1>
-  <p class="tuesunparagrapheharry">Bienvenue sur ce petit blogue, qui raconte les aventures incroyables d'une simple française expatriée
-  aux Emirats Arabes unis</p>
+  <p class="tuesunparagrapheharry">Bienvenue sur ce petit blog. Ici sera répértorié des petites choses sur ma vie, à commencer
+  par qui je suis, ou je vis, et quels sont mes hobbys. Novice dans le domaine, j'apprends à réaliser ce site avec OpenClassroom. </p>
   <p>Hello there</p>
 
 <footer>
