--- a/Pages/Quisuisje.html
+++ b/Pages/Quisuisje.html
@@ -3,7 +3,7 @@
 <head> <!--indications de la page-->
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Abu Dhabi Life</title> <!--titre de l'onglet-->
+  <title>Little adventuress</title> <!--titre de l'onglet-->
 </head>
 
 
@@ -12,14 +12,15 @@
   <header>
 <!--y aura une image de titre ici-->
     <h1>~Little adventuress~</h1>
+
   </header>
 
   <nav>
-    <p><a href="Accueil.html">- Accueil -</a></p>
+    <p><a href="Accueil.html">-Accueil-</a></p>
     <p><a href="Quisuisje.html">-About Me-</a></p>
-    <p><a href="abudhabi.html">- Abu Dhabi -</a></p>
-    <p><a href="dubai.html">- Dubai -</a></p>
-    <p><a href="conseils.html">- Conseils -</a></p>
+    <p><a href="dubai.html">-Projets/hobbys-</a></p>
+    <p><a href="abudhabi.html">-Voyages-</a></p>
+  
     <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
   </nav>
 
