--- a/Pages/conseils.html
+++ b/Pages/conseils.html
@@ -3,7 +3,7 @@
 <head> <!--indications de la page-->
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Abu Dhabi Life</title> <!--titre de l'onglet-->
+  <title>Little adventuress</title> <!--titre de l'onglet-->
 </head>
 
 
@@ -12,6 +12,7 @@
   <header>
 <!--y aura une image de titre ici-->
     <h1>~Little adventuress~</h1>
+
 
   </header>
 
