--- a/Pages/Accueil.html
+++ b/Pages/Accueil.html
@@ -11,7 +11,7 @@
 <body> <!--corps de la page-->
   <header>
 <!--y aura une image de titre ici-->
-    <p><img src="images/blason.png" alt="Logo du site" id="Logo"></p>
+    <img src="images/blason.png" alt="Logo du site" id="Logo"/>
     <h1 class="titrepage">~Little adventuress~</h1>
 
 
