--- a/Pages/Quisuisje.html
+++ b/Pages/Quisuisje.html
@@ -16,11 +16,11 @@
   </header>
 
   <nav>
-    <p><a href="Accueil.html">-Accueil-</a></p>
+    <p><a href="index.html">-Accueil-</a></p>
     <p><a href="Quisuisje.html">-About Me-</a></p>
     <p><a href="dubai.html">-Projets/hobbys-</a></p>
     <p><a href="abudhabi.html">-Voyages-</a></p>
-  
+
     <!-- les pages du site genre Abu dhabi, dubai, galerie photos, conseils de touriste... -->
   </nav>
 
