--- a/Pages/index.html
+++ b/Pages/index.html
@@ -19,7 +19,7 @@
 
   <nav>
 
-    <p><a href="Accueil.html">-Accueil-</a></p>
+    <p><a href="index.html">-Accueil-</a></p>
     <p><a href="Quisuisje.html">-About Me-</a></p>
     <p><a href="dubai.html">-Projets/hobbys-</a></p>
     <p><a href="abudhabi.html">-Voyages-</a></p>
