--- a/index.html
+++ b/index.html
@@ -19,16 +19,23 @@
 
   <nav>
 
-    <p><a href="index.html">-Accueil-</a></p>
-    <p><a href="Quisuisje.html">-About Me-</a></p>
-    <p><a href="dubai.html">-Projets/hobbys-</a></p>
-    <p><a href="abudhabi.html">-Voyages-</a></p>
+    <p><a href="index.html" class="pageactuelle">Accueil</a></p>
+    <p>~</p>
+    <p><a href="Quisuisje.html">About Me</a></p>
+    <p>~</p>
+    <p><a href="dubai.html">Projets and hobbys</a></p>
+    <p>~</p>
+    <p><a href="abudhabi.html">Voyages</a></p>
 
   </nav>
+
+
+<div class="bandeaupage">
+  <h1>-BIENVENUE CHERS AMIS-</h1>
+</div>
+
 <article class="corpspage">
 
-
-<h1 class="titrearticle">-BIENVENUE CHERS AMIS-</h1>
   <p>Bienvenue sur ce petit blog. Ici sera répértorié des petites choses sur ma vie, à commencer
   par qui je suis, ou je vis, et quels sont mes hobbys. Novice dans le domaine, j'apprends à réaliser ce site avec OpenClassroom. </p>
   <p>Hello there</p>
