--- a/index.html
+++ b/index.html
@@ -12,33 +12,36 @@
   <header>
 <!--y aura une image de titre ici-->
     <img src="images/blason.png" alt="Logo du site" width="15%" height="15%"/>
-    <h1>~Little adventuress~</h1>
-
+    <h1> Little adventuress </h1>
+    <img src="images/flower.png" alt="fleurs" width="10%" height="10%"/>
 
   </header>
 
   <nav>
 
     <p><a href="index.html" class="pageactuelle">Accueil</a></p>
-    <p>~</p>
-    <p><a href="Quisuisje.html">About Me</a></p>
-    <p>~</p>
+
     <p><a href="dubai.html">Projets and hobbys</a></p>
-    <p>~</p>
+
+    <p><a href="Quisuisje.html">Lectures</a></p>
+  
     <p><a href="abudhabi.html">Voyages</a></p>
 
   </nav>
 
 
-<div class="bandeaupage">
-  <h1>-BIENVENUE CHERS AMIS-</h1>
-</div>
 
 <article class="corpspage">
 
-  <p>Bienvenue sur ce petit blog. Ici sera répértorié des petites choses sur ma vie, à commencer
-  par qui je suis, ou je vis, et quels sont mes hobbys. Novice dans le domaine, j'apprends à réaliser ce site avec OpenClassroom. </p>
-  <p>Hello there</p>
+  <h1 class="titrepage">BIENVENUE CHERS AMIS</h1>
+
+  <h3>Bienvenue sur ce petit blog. Ici sera répértorié des petites choses sur ma vie, à commencer
+  par qui je suis, ou je vis, et quels sont mes hobbys. Novice dans le domaine, j'apprends à réaliser ce site avec OpenClassroom. </h3>
+  <p>Hello there Hello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello there
+  Hello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello there
+Hello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello there
+Hello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello there
+Hello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello there</p>
 
 
 </article>
@@ -47,6 +50,13 @@
 <footer>
   <!--ici ces les trucs qu'il y a en bas des pages genre les contacts-->
 <p>WAZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+<ul>
+  <li>Never</li>
+  <li>Gonna</li>
+  <li>Give</li>
+  <li>You</li>
+  <li>Up</li>
+</ul>
 </footer>
 
 </html>
