--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--y aura une image de titre ici-->
     <img src="images/blason.png" alt="Logo du site" width="15%" height="15%"/>
     <h1> Little adventuress </h1>
-    <img src="images/flower.png" alt="fleurs" width="10%" height="10%"/>
+    <img src="images/flower.png" alt="fleurs" width="8%" height="8%"/>
 
   </header>
 
@@ -24,7 +24,7 @@
     <p><a href="dubai.html">Projets and hobbys</a></p>
 
     <p><a href="Quisuisje.html">Lectures</a></p>
-  
+
     <p><a href="abudhabi.html">Voyages</a></p>
 
   </nav>
@@ -33,7 +33,7 @@
 
 <article class="corpspage">
 
-  <h1 class="titrepage">BIENVENUE CHERS AMIS</h1>
+  <h1 class="titrepage">Bienvenue chers amis</h1>
 
   <h3>Bienvenue sur ce petit blog. Ici sera répértorié des petites choses sur ma vie, à commencer
   par qui je suis, ou je vis, et quels sont mes hobbys. Novice dans le domaine, j'apprends à réaliser ce site avec OpenClassroom. </h3>
