up - ajout de contenu

--- a/index.html
+++ b/index.html
@@ -33,30 +33,61 @@
 
 <article class="corpspage">
 
+
   <h1 class="titrepage">Bienvenue chers amis</h1>
 
-  <h3>Bienvenue sur ce petit blog. Ici sera répértorié des petites choses sur ma vie, à commencer
-  par qui je suis, ou je vis, et quels sont mes hobbys. Novice dans le domaine, j'apprends à réaliser ce site avec OpenClassroom. </h3>
-  <p>Hello there Hello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello there
-  Hello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello there
-Hello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello there
-Hello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello there
-Hello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello thereHello there</p>
+<div class="présentation">
+  <h3>Je vous souhaite la bienvenue sur mon petit blog ! Ici sera répértorié des petites choses sur ma vie, mes hobbys, et autres.<br/>
+     Novice dans l'apprentissage du web et de ses alentours, j'apprends à réaliser ce site avec <a href="https://openclassrooms.com/fr" title="Le site d'OpenClassrooms !" target="_blank">OpenClassrooms</a>.<br/></h3>
+  <h3>Petit à petit, je réalise ce site web, et au fil du temps, de plus en plus de choses s'ajouteront au reste. C'est avec le coeur que je le réalise, et avec plaisir que je partage ici ce que j'aime.</h3>
+</div>
+
+<div class="bio">
+
+    <div class="labio">
+      <h2>•Qui suis-je ?</h2>
+      <h4>- Identité</h4>
+      <ul>
+        <li>NOM : Vergnaud</li>
+        <li>PRENOM : Amélie</li>
+        <li>PSEUDO : Hasphodelle49</li>
+        <li>AGE : 18</li>
+      </ul>
+      <h4>- Lieux importants</h4>
+      <ul>
+        <li>SPAWN : Nantes - France</li>
+        <li>SAVE : Abu Dhabi - Emirats arabes unis</li>
+      </ul>
+      <h4>- Centres d'intérêts</h4>
+      <ul>
+        <li>Dessin</li>
+        <li>Ecriture</li>
+        <li> Photographie</li>
+        <li>Jeux vidéos</li>
+      </ul>
+    </div>
+
+  <img class="imgpp" src="images/Hasphodelle.png" alt="Photo de profil">
+
+  </div>
+
+<div class="whyweb">
+  <h2>•Pourquoi je fais ce site ?</h2>
+  <p>J'ai décidé de réaliser ce site web, pour m'entrainer dans l'apprentissage des langages web, et particulièrement l'HTML et le CSS sans lesquels je n'aurais pas pu faire tout cela.</p>
+  <p>Ce sont mes amis qui m'ont fait découvrir ces langages, et au fil des leçons, j'y ai pris goût. Maintenant, je consens à utiliser ces compétences acquisent ainsi que les prochaines qui s'ajouteront, dans mon projet d'avenir.
+  Même si celui-ci me semble encore flou, l'entonnoir des diversités de parcours professionnels se referme de plus en plus. Je sais que mon métier, encore indéfini à l'heure qu'il est, sera dans le domaine mutlimédia et internet. </p>
+
+</div>
 
 
 </article>
 
 
 <footer>
-  <!--ici ces les trucs qu'il y a en bas des pages genre les contacts-->
-<p>WAZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-<ul>
-  <li>Never</li>
-  <li>Gonna</li>
-  <li>Give</li>
-  <li>You</li>
-  <li>Up</li>
-</ul>
+
+<p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" width='5%' title="Vers ma page linkedin !"></a>
+<a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" width='5%'  title="Vers mon compte instagram photos !"></a></p>
+
 </footer>
 
 </html>
