--- a/index.html
+++ b/index.html
@@ -21,31 +21,34 @@
 
     <p><a href="index.html" class="pageactuelle">Accueil</a></p>
 
-    <p><a href="dubai.html">Projets and hobbys</a></p>
+    <p><a href="projets.html">Projets and hobbys</a></p>
 
-    <p><a href="Quisuisje.html">Lectures</a></p>
+    <p><a href="lectures.html">Lectures</a></p>
 
-    <p><a href="abudhabi.html">Voyages</a></p>
+    <p><a href="voyages.html">Voyages</a></p>
 
   </nav>
 
 
 
-<article class="corpspage">
+<div class="corpspage">
 
+<img class="imgcoin" src="images/encadrefleur.png" alt="imagecoin" width="12%" >
+<img class="imgcoin2" src="images/encadrefleur1.png" alt="imagecoin" width="12%" >
 
-  <h1 class="titrepage">Bienvenue chers amis</h1>
+  <h1 class="titrepage">• Bienvenue chers amis •</h1>
 
 <div class="présentation">
   <h3>Je vous souhaite la bienvenue sur mon petit blog ! Ici sera répértorié des petites choses sur ma vie, mes hobbys, et autres.<br/>
      Novice dans l'apprentissage du web et de ses alentours, j'apprends à réaliser ce site avec <a href="https://openclassrooms.com/fr" title="Le site d'OpenClassrooms !" target="_blank">OpenClassrooms</a>.<br/></h3>
-  <h3>Petit à petit, je réalise ce site web, et au fil du temps, de plus en plus de choses s'ajouteront au reste. C'est avec le coeur que je le réalise, et avec plaisir que je partage ici ce que j'aime.</h3>
+  <h3>Petit à petit, je réalise ce site web, et au fil du temps, de plus en plus de choses s'ajouteront au reste. C'est avec le coeur que je le réalise, et avec plaisir que je partage ici ce que je fais et aime.</h3>
+  <h3>Encore un peu vide, des choses changeront régulièrement, il ne faut donc pas s'étonner des nouvelles choses importunes !</h3>
 </div>
 
 <div class="bio">
 
     <div class="labio">
-      <h2>•Qui suis-je ?</h2>
+      <h2>• Qui suis-je ?</h2>
       <h4>- Identité</h4>
       <ul>
         <li>NOM : Vergnaud</li>
@@ -72,15 +75,18 @@
   </div>
 
 <div class="whyweb">
-  <h2>•Pourquoi je fais ce site ?</h2>
-  <p>J'ai décidé de réaliser ce site web, pour m'entrainer dans l'apprentissage des langages web, et particulièrement l'HTML et le CSS sans lesquels je n'aurais pas pu faire tout cela.</p>
+  <h2>• Pourquoi je fais ce site ?</h2>
+  <p>J'ai décidé de réaliser ce site web, pour m'entrainer dans l'apprentissage des langages web, et particulièrement l'HTML et le CSS sans lesquels je n'aurais pas pu faire tout cela. Bien sûrs, je sais que d'autres langages utilisés notamment dans le web viendront s'ajouter à mon panel
+  de connaissances, petit à petit.</p>
   <p>Ce sont mes amis qui m'ont fait découvrir ces langages, et au fil des leçons, j'y ai pris goût. Maintenant, je consens à utiliser ces compétences acquisent ainsi que les prochaines qui s'ajouteront, dans mon projet d'avenir.
-  Même si celui-ci me semble encore flou, l'entonnoir des diversités de parcours professionnels se referme de plus en plus. Je sais que mon métier, encore indéfini à l'heure qu'il est, sera dans le domaine mutlimédia et internet. </p>
+  Même si celui-ci me semble encore flou, l'entonnoir des diversités de parcours professionnels se referme de plus en plus. Je sais que mon métier, encore indéfini à l'heure qu'il est, sera dans le domaine du mutlimédia et internet.</p>
+  <p>Le format "blog" de ce site est plus facile a exploiter pour moi, ayant assez de choses à y mettre, avec un peu de réflexion dans mes souvenirs et mon présent. C'est particulièrement les projets en cours avec mes amis, qui me tiennent à coeur. Par exemple, nous sommes en pleine création d'un jeu vidéo RPG.
+  Encore très récent et peu développé, j'en suis la cheffe de projet, et l'histoire au coeur de ce projet est mon imagination.</p>
 
 </div>
 
 
-</article>
+</div>
 
 
 <footer>
