--- a/projets.html
+++ b/projets.html
@@ -36,7 +36,34 @@
 <img class="imgcoin" src="images/encadrefleur.png" alt="imagecoin" width="12%" >
 <img class="imgcoin2" src="images/encadrefleur1.png" alt="imagecoin" width="12%" >
 
-  <h1 class="titrepage">• Les projets et mes hobbys •</h1>
+  <h1 class="titrepage">• Projets et Hobbys •</h1>
+
+  <div class="introductionpage">
+    <h3> Sur cette page, vous trouverez mes différents hobbys, comme la photo, le dessin... ainsi que mes projets, effectués seule ou en groupe, avec mes amis.</h3>
+  </div>
+
+<div class="lieninterpage">
+  <p><a href="#dessin">Dessin</a></p>
+  <p><a href="#ecriture">Ecriture</a></p>
+  <p><a href="#photo">Photo</a></p>
+  <p><a href="#Projets">Projets communs</a></p>
+</div>
+
+<div class="Dessin">
+  <h2 id="dessin">• Le dessin</h2>
+</div>
+
+<div class="Ecriture">
+  <h2 id="ecriture">• L'écriture</h2>
+</div>
+
+<div class="Photo">
+  <h2 id="photo">• La photographie</h2>
+</div>
+  
+<div class="Projets">
+  <h2 id="Projets">• Projets communs</h2>
+</div>
 
 
 </div>
