--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <h1 class="titrepage">• Bienvenue chers amis •</h1>
 
-<div class="présentation">
+<div class="introductionpage">
   <h3>Je vous souhaite la bienvenue sur mon petit blog ! Ici sera répértorié des petites choses sur ma vie, mes hobbys, et autres.<br/>
      Novice dans l'apprentissage du web et de ses alentours, j'apprends à réaliser ce site avec <a href="https://openclassrooms.com/fr" title="Le site d'OpenClassrooms !" target="_blank">OpenClassrooms</a>.<br/></h3>
   <h3>Petit à petit, je réalise ce site web, et au fil du temps, de plus en plus de choses s'ajouteront au reste. C'est avec le coeur que je le réalise, et avec plaisir que je partage ici ce que je fais et aime.</h3>
