--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <title>Little Adventuress</title> <!--titre de l'onglet-->
+  <link rel="icon" type="image/png" href="images/fleurr.png">
 </head>
 
 
 
-<body> <!--corps de la page-->
+<body class="bruh"> <!--corps de la page-->
   <header>
 <!--y aura une image de titre ici-->
     <img src="images/blason.png" alt="Logo du site" width="15%" height="15%"/>
@@ -81,7 +82,7 @@
   <p>Ce sont mes amis qui m'ont fait découvrir ces langages, et au fil des leçons, j'y ai pris goût. Maintenant, je consens à utiliser ces compétences acquisent ainsi que les prochaines qui s'ajouteront, dans mon projet d'avenir.
   Même si celui-ci me semble encore flou, l'entonnoir des diversités de parcours professionnels se referme de plus en plus. Je sais que mon métier, encore indéfini à l'heure qu'il est, sera dans le domaine du mutlimédia et internet.</p>
   <p>Le format "blog" de ce site est plus facile a exploiter pour moi, ayant assez de choses à y mettre, avec un peu de réflexion dans mes souvenirs et mon présent. C'est particulièrement les projets en cours avec mes amis, qui me tiennent à coeur. Par exemple, nous sommes en pleine création d'un jeu vidéo RPG.
-  Encore très récent et peu développé, j'en suis la cheffe de projet, et l'histoire au coeur de ce projet est mon imagination.</p>
+  Encore très récent et peu développé, j'en suis la cheffe de projet, et l'histoire en son coeur provient directement de mon imagination.</p>
 
 </div>
 
@@ -95,5 +96,5 @@
 <a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" width='5%'  title="Vers mon compte instagram photos !"></a></p>
 
 </footer>
-
+</body>
 </html>
