--- a/projets.html
+++ b/projets.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <title>Little Adventuress</title> <!--titre de l'onglet-->
+  <link rel="icon" type="image/png" href="images/fleurr.png">
 </head>
 
 
 
-<body> <!--corps de la page-->
+<body class="bruh"> <!--corps de la page-->
   <header>
 <!--y aura une image de titre ici-->
     <img src="images/blason.png" alt="Logo du site" width="15%" height="15%"/>
@@ -51,16 +52,60 @@
 
 <div class="Dessin">
   <h2 id="dessin">• Le dessin</h2>
+  <p>Je classe ici avec une petite histoire pour chacun, mes dessins, réalisés à l'aide, pour certains, du logiciel Sketchbook pour les premiers, et plus récemment, je suis passée sur le logiciel Krita.
+  Je dessine sur le numérique à l'aide d'une tablette graphique Huion H610 pro, directement reliée à mon ordinateur portable.</p>
+
+  <div class="imgdessin">
+   <img src="images/imgdessins/saguaroblason.png" alt="img1" width="50%">
+   <p>Le blason de Saguaro, est l'une des représentations issues de l'histoire de Blue Bird que j'ai réalisée</p>
+   <img src="images/imgdessins/desert1.png" alt="img2" width="50%">
+   <p>Un autre dessin issu du même univers de Blue Bird, représentant le désert de Saguaro, et en fond, sa capitale, "Saguaria Centrale"</p>
+
+  </div>
+
 </div>
 
 <div class="Ecriture">
   <h2 id="ecriture">• L'écriture</h2>
+  <p>Pour comprendre la plupart de mes dessins, il faut s'intéresser à cette partie, étant donné que beaucoup d'illustrations puisent leur source dans mon écriture.
+  Depuis maintenant longtemps, j'invente constamment des histoires, inspirées particulièrement par de nombreuses oeuvres littéraires ou
+  cinématographiques, connues plus ou moins. <br>
+Depuis que mes histoires se font plus concrètes malgré les diverses modifications que j'y apporte à longueur de temps, j'ai souhaité de plus en plus illustrer mes idées en réalisant
+au moins les personnages, les coeurs battants de mon imagination. </p>
 </div>
+
+<div class="bluebird">
+
+  <div class="textebluebird">
+<h3>- Blue Bird -</h3>
+  <p>Une classe se retrouve après une longue et étrange séparation à bord d’un vaisseau extraterrestre. Persuadés que la Terre est détruite, ils vivent tant bien que de mal leur nouvelle vie surveillée  de près.<br>
+    La plupart de leurs faits et gestes sont observés. Ils ne savent rien de ce qu’il se passe en dehors du vaisseau, et sont plus solidaires que jamais.<br>
+    Mais une seule élève n’est plus pareille. Quelque chose l’a changée. Avant, elle était souriante, joyeuse, maintenant, elle n’est plus qu’un visage blanc comme le marbre n’affichant plus aucune expressions. Restant muette face aux questions et à l’inquiétude de ses camarade, elle reste à l’écart, fascinée par l’immensité de l’espace que le vaisseau sillonne…
+  </p>
+  </div>
+
+<img src="images/macaron.jpg" alt="imgtest" width="30%" height="30%">
+
+</div>
+
+<div class="Trident">
+
+  <div class="textetrident">
+    <h3>- Encore sans nom -</h3>
+    <p>Dans notre monde, un établissement scolaire se démarque des autres. Connu pour abriter les enfants de magiciens, ainsi que certains nommés Voyageurs, il forme ces jeunes gens aux périples de la vie lorsque l’on possède des pouvoirs. Ce monde magique, est régit par quatre clans, dont celui des Abysses est le chef suprême. Chaque clan possède une famille, qui instaure ses lois et ses mœurs aux autres du clan. La famille de Beaulieu est la famille régente du clan des Abysses, ainsi que de cet univers de magie. Ils supervisent deux établissements de magie, dont un lycée situé à Saumur, composé de magiciens et de sans-magie. Un établissement mixte.<br>
+      Loin de là, dans d’autres époques, vagabondes illégalement une bande de gamins surmontés tous de la même casquette, et semblent tout droit sortis d’une vieille usine. C’est le cas. Pendant la première partie du XXe siècle, en pleine révolution industrielles, ils se sont fondus au sein de la population, et travaillaient dans une grande usine réputée de la ville de Londres.<br>
+      Parmi eux, la seule jeune fille du groupe, à l’aube de ses dix-sept ans, possède la magie du voyage temporel, mais également d’autres pouvoirs, supposés être référencés, dans l’ordre des choses. Les régisseurs de la magie ne souhaitent pas d’écart, et Eléonore en fait constamment, menaçant parfois l’ordre logique des choses. Alors qu’elle est recherchée dans toutes les époques, la jeune fille décide de se jeter dans la gueule du loup et d’intégrer le lycée de magie de Saumur. Elle se considérera alors plus maligne que les autres, sachant certaines choses, supposées disparues depuis longtemps…
+    </p>
+  </div>
+
+<img src="images/macaron.jpg" alt="imgtest" width="30%" height="30%">
+</div>
+
 
 <div class="Photo">
   <h2 id="photo">• La photographie</h2>
 </div>
-  
+
 <div class="Projets">
   <h2 id="Projets">• Projets communs</h2>
 </div>
@@ -74,6 +119,7 @@
 <p><a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.png" alt="linkedin" width='5%' title="Vers ma page linkedin !"></a>
 <a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" width='5%'  title="Vers mon compte instagram photos !"></a></p>
 
-</footer>
 
+</footer>
+</body>
 </html>
