--- a/voyages.html
+++ b/voyages.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <title>Little Adventuress</title> <!--titre de l'onglet-->
+  <link rel="icon" type="image/png" href="images/fleurr.png">
 </head>
 
 
 
-<body> <!--corps de la page-->
+<body class="bruh"> <!--corps de la page-->
   <header>
 <!--y aura une image de titre ici-->
     <img src="images/blason.png" alt="Logo du site" width="15%" height="15%"/>
@@ -94,5 +95,5 @@ Ole!</h3>
 <a href="https://www.picuki.com/profile/hasphotos49" target="_blank"><img src="images/instagram.png" alt="instagram" width='5%'  title="Vers mon compte instagram photos !"></a></p>
 
 </footer>
-
+</body>
 </html>
