--- a/Never.html
+++ b/Never.html
@@ -2,7 +2,7 @@
 <html>
 <head> <!--indications de la page-->
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css2">
+  <link rel="stylesheet" href="css2.css">
   <title>RickAstleyTime</title> <!--titre de l'onglet-->
   <link rel="icon" type="image/png" href="images/fleurr.png">
 </head>
@@ -11,9 +11,9 @@
 
 <body> <!--corps de la page-->
   <div class="nevergonna">
-    <audio  src="images/Neversong.mp3" autoplay></audio>
+    <audio  src="images/Neversong.mp3" controls>yolo</audio>
 
-     <h1>(͠≖ ͜ʖ͠≖)</h1>
+
   </div>
 
 </body>
