--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
 
 <div class="corpspage">
-
-<img class="imgcoin" src="images/encadrefleur.png" alt="imagecoin" width="12%" >
+<p><a href="Never.html" target="_blank"><img class="imgcoin" src="images/encadrefleur.png" alt="imagecoin" width='12%' title="It's a beautiful flower, nah ?"></a></p>
 <img class="imgcoin2" src="images/encadrefleur1.png" alt="imagecoin" width="12%" >
 
   <h1 class="titrepage">• Bienvenue chers amis •</h1>
@@ -43,30 +42,38 @@
   <h3>Je vous souhaite la bienvenue sur mon petit blog ! Ici sera répértorié des petites choses sur ma vie, mes hobbys, et autres.<br/>
      Novice dans l'apprentissage du web et de ses alentours, j'apprends à réaliser ce site avec <a href="https://openclassrooms.com/fr" title="Le site d'OpenClassrooms !" target="_blank">OpenClassrooms</a>.<br/></h3>
   <h3>Petit à petit, je réalise ce site web, et au fil du temps, de plus en plus de choses s'ajouteront au reste. C'est avec le coeur que je le réalise, et avec plaisir que je partage ici ce que je fais et aime.</h3>
-  <h3>Encore un peu vide, des choses changeront régulièrement, il ne faut donc pas s'étonner des nouvelles choses importunes !</h3>
+
+  <div class="warning">
+  <h3>! Des choses changeront en raison de la construction progressive du site, et du terrain d'entrainement qu'il me procure, de ce fait, même le design d'aujourd'hui peut très bien ne plus être celui de demain
+    et donner donc l'impression de changer totalement de site, mais le contenu reste le même, et s'approvisionnera dans le futur !</h3>
+    <h3>! Pas encore très optimisé pour le format téléphone !</h3>
+  </div>
+
 </div>
+
 
 <div class="bio">
 
     <div class="labio">
       <h2>• Qui suis-je ?</h2>
-      <h4>- Identité</h4>
+      <h4>- Player profile</h4>
       <ul>
-        <li>NOM : Vergnaud</li>
-        <li>PRENOM : Amélie</li>
-        <li>PSEUDO : Hasphodelle49</li>
-        <li>AGE : 18</li>
+        <li>SURNAME : Vergnaud</li>
+        <li>NAME : Amélie</li>
+        <li>USER NAME : Hasphodelle49</li>
+        <li>XP'S YEARS : 19</li>
       </ul>
-      <h4>- Lieux importants</h4>
+      <h4>- Zones Importantes</h4>
       <ul>
         <li>SPAWN : Nantes - France</li>
         <li>SAVE : Abu Dhabi - Emirats arabes unis</li>
+        <li>FAVORITE PLACE : Saumur - France</li>
       </ul>
-      <h4>- Centres d'intérêts</h4>
+      <h4>- Hobbys </h4>
       <ul>
         <li>Dessin</li>
         <li>Ecriture</li>
-        <li> Photographie</li>
+        <li>Photographie</li>
         <li>Jeux vidéos</li>
       </ul>
     </div>
@@ -77,12 +84,12 @@
 
 <div class="whyweb">
   <h2>• Pourquoi je fais ce site ?</h2>
-  <p>J'ai décidé de réaliser ce site web, pour m'entrainer dans l'apprentissage des langages web, et particulièrement l'HTML et le CSS sans lesquels je n'aurais pas pu faire tout cela. Bien sûrs, je sais que d'autres langages utilisés notamment dans le web viendront s'ajouter à mon panel
+  <p>J'ai décidé de réaliser ce site web, pour m'entrainer dans l'apprentissage des langages web, et particulièrement l'HTML et le CSS sans lesquels je n'aurais pas pu faire tout cela. Bien sûr, je sais que d'autres langages utilisés notamment dans le web viendront s'ajouter à mon panel
   de connaissances, petit à petit.</p>
   <p>Ce sont mes amis qui m'ont fait découvrir ces langages, et au fil des leçons, j'y ai pris goût. Maintenant, je consens à utiliser ces compétences acquisent ainsi que les prochaines qui s'ajouteront, dans mon projet d'avenir.
   Même si celui-ci me semble encore flou, l'entonnoir des diversités de parcours professionnels se referme de plus en plus. Je sais que mon métier, encore indéfini à l'heure qu'il est, sera dans le domaine du mutlimédia et internet.</p>
-  <p>Le format "blog" de ce site est plus facile a exploiter pour moi, ayant assez de choses à y mettre, avec un peu de réflexion dans mes souvenirs et mon présent. C'est particulièrement les projets en cours avec mes amis, qui me tiennent à coeur. Par exemple, nous sommes en pleine création d'un jeu vidéo RPG.
-  Encore très récent et peu développé, j'en suis la cheffe de projet, et l'histoire en son coeur provient directement de mon imagination.</p>
+  <p>Le format "blog" de ce site est plus facile a exploiter pour moi, ayant assez de choses à y mettre, avec un peu de réflexion dans mes souvenirs et mon présent. C'est particulièrement les projets en cours avec mes amis, ou seule, qui me tiennent à coeur, et que je vous laisse découvrir
+    parmis ces pages web, qui elles aussi font partie intégrante de ces projets encore en cours.</p>
 
 </div>
 
