--- a/projets.html
+++ b/projets.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <title>Little Adventuress</title> <!--titre de l'onglet-->
-  <link rel="icon" type="image/png" href="images/fleurr.png">
+  <link rel="icon" type="image/png" href="images/me3.png">
 </head>
 
 
 
 <body class="bruh"> <!--corps de la page-->
   <header>
-<!--y aura une image de titre ici-->
-    <img src="images/blason.png" alt="Logo du site" width="15%" height="15%"/>
+
+    <img src="images/me3.png" alt="Logo du site" width="16%" height="16%"/>
     <h1> Little adventuress </h1>
     <img src="images/flower.png" alt="fleurs" width="8%" height="8%"/>
 
@@ -53,7 +53,7 @@
 <div class="Dessin">
   <h2 id="dessin">• Le dessin</h2>
   <p>Je classe ici avec une petite histoire pour chacun, mes dessins, réalisés à l'aide, pour certains, du logiciel Sketchbook pour les premiers, et plus récemment, je suis passée sur le logiciel Krita.
-  Je dessine sur le numérique à l'aide d'une tablette graphique Huion H610 pro, directement reliée à mon ordinateur portable.</p>
+  Je dessinais sur le numérique, encore récemment à l'aide d'une tablette graphique Huion H610 pro, puisque aujourd'hui c'est à l'aide de la tablette à écran XP-Pen Innovator 16.</p>
 
   <div class="imgdessin">
    <img src="images/imgdessins/saguaroblason.png" alt="img1" width="50%">
@@ -98,7 +98,7 @@ au moins les personnages, les coeurs battants de mon imagination. </p>
     </p>
   </div>
 
-<img src="images/macaron.jpg" alt="imgtest" width="30%" height="30%">
+<img src="images/macaron.jpg" alt="imgtest" width="30%">
 </div>
 
 
@@ -108,7 +108,31 @@ au moins les personnages, les coeurs battants de mon imagination. </p>
 
 <div class="Projets">
   <h2 id="Projets">• Projets communs</h2>
+  <p>Les projets communs regroupent ici ceux effectués avec mes amis. Au nombre de trois fonctionnels actuellement (moi comprise), chacun possède son rôle.</p>
+
+  <h4>- Membres du groupe</h4>
+  <ul>
+    <li>HASPHODELLE (c'est moi uwu) : cheffe de projet - écrivaine du scénario - réalise les sprites des personnages </li>
+    <li>DAGUERIAN : Codeur</li>
+    <li>F0XY : réalisateur des décors et environnement visuels du jeu</li>
+    <li>CREEPOSUC : musicien</li>
+  </ul>
+
+  <p>Le projet, lourd, conséquent, mais qui nous tient à coeur, possède comme pilier l'histoire de Blue Bird expliquée plus haut dans la rubrique L'écriture. En effet, cette histoire tend à
+  s'adapter en jeu vidéo de type Role Play Game, abrégé en RPG. Réalisé sous Python à l'heure actuelle, il est actuellement en suspend afin d'être prochainement recodé sous le langage C++</p>
 </div>
+
+<div class="videobluebird">
+
+  <h5>Petite vidéo présentant ce qu'il y a actuellement de réalisé pour ce jeu</h5>
+  <video controls poster="images/me2.png" width="50%" height="50%">
+    <source src="video/BlueBirdVideo.mp4">
+  </video>
+
+</div>
+
+<p>On remarque effectivement qu'il n'y a pas grand chose pour le moment, en terme d'histoire ou bien de déplacement mais cela reste un début prometteur !</p>
+
 
 
 </div>
