--- a/lectures.html
+++ b/lectures.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <title>Little Adventuress</title> <!--titre de l'onglet-->
-  <link rel="icon" type="image/png" href="images/fleurr.png">
+  <link rel="icon" type="image/png" href="images/me3.png">
 </head>
 
 
 
 <body class="bruh"> <!--corps de la page-->
   <header>
-<!--y aura une image de titre ici-->
-    <img src="images/blason.png" alt="Logo du site" width="15%" height="15%"/>
+
+    <img src="images/me3.png" alt="Logo du site" width="16%" height="16%"/>
     <h1> Little adventuress </h1>
     <img src="images/flower.png" alt="fleurs" width="8%" height="8%"/>
 
