--- a/projets.html
+++ b/projets.html
@@ -52,26 +52,27 @@
 
 <div class="Dessin">
   <h2 id="dessin">• Le dessin</h2>
-  <p>Je classe ici avec une petite histoire pour chacun, mes dessins, réalisés à l'aide, pour certains, du logiciel Sketchbook pour les premiers, et plus récemment, je suis passée sur le logiciel Krita.
-  Je dessinais sur le numérique, encore récemment à l'aide d'une tablette graphique Huion H610 pro, puisque aujourd'hui c'est à l'aide de la tablette à écran XP-Pen Innovator 16.</p>
+  <p>Je classe ici mes dessins qui n'ont pas de lien avec les histoires référencées ici. Ils sont réalisés à l'aide, pour certains, du logiciel Sketchbook pour les premiers, et plus récemment, je suis passée sur le logiciel Krita.
+  Je dessinais sur le numérique, encore récemment à l'aide d'une tablette graphique Huion H610 pro V1, puisque aujourd'hui c'est à l'aide de la tablette à écran XP-Pen Innovator 16.</p>
 
   <div class="imgdessin">
-   <img src="images/imgdessins/saguaroblason.png" alt="img1" width="50%">
-   <p>Le blason de Saguaro, est l'une des représentations issues de l'histoire de Blue Bird que j'ai réalisée</p>
-   <img src="images/imgdessins/desert1.png" alt="img2" width="50%">
-   <p>Un autre dessin issu du même univers de Blue Bird, représentant le désert de Saguaro, et en fond, sa capitale, "Saguaria Centrale"</p>
+
+   <img src="images/imgdessins/artwork1.png" alt="img1" width="40%" height="40%">
+
+   <img src="images/imgdessins/dragon.png" alt="img2" width="40%" height="40%">
 
   </div>
 
 </div>
 
 <div class="Ecriture">
-  <h2 id="ecriture">• L'écriture</h2>
-  <p>Pour comprendre la plupart de mes dessins, il faut s'intéresser à cette partie, étant donné que beaucoup d'illustrations puisent leur source dans mon écriture.
-  Depuis maintenant longtemps, j'invente constamment des histoires, inspirées particulièrement par de nombreuses oeuvres littéraires ou
-  cinématographiques, connues plus ou moins. <br>
+
+  <h2 id="ecriture">• L'écriture (+ Dessins)</h2>
+  <p>  Depuis maintenant longtemps, j'invente constamment des histoires, inspirées particulièrement par de nombreuses oeuvres littéraires ou
+  cinématographiques, connues plus ou moins. Néanmoins, elle viennes forcément de mon imagination. <br>
 Depuis que mes histoires se font plus concrètes malgré les diverses modifications que j'y apporte à longueur de temps, j'ai souhaité de plus en plus illustrer mes idées en réalisant
-au moins les personnages, les coeurs battants de mon imagination. </p>
+au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'accompagne également les personnages et, si je les ai dessinés, les paysages. </p>
+
 </div>
 
 <div class="bluebird">
@@ -84,23 +85,72 @@ au moins les personnages, les coeurs battants de mon imagination. </p>
   </p>
   </div>
 
-<img src="images/macaron.jpg" alt="imgtest" width="30%" height="30%">
+<img src="images/blasonfinal.png" alt="imgtest" width="20%" height="20%">
 
 </div>
+
+<h3>- Les dessins de Blue Bird -</h3>
+  <p>Blasons des planètes dessinés à ce jour :</p>
+
+<div class="dessinshistoires">
+
+<img src="images/imgdessins/saguaroblason.png" alt="saguaro" width="20%" height="20%">
+<img src="images/imgdessins/blasonabutilon.png" alt="abutilon" width="20%" height="20%">
+<img src="images/imgdessins/blasonastragale.png" alt="astragale" width="20%" height="20%">
+<img src="images/imgdessins/blasonandrosace.png" alt="androsace" width="20%" height="20%">
+
+</div>
+
+  <p>Personnages dessinés à ce jour :</p>
+
+<div class="dessinshistoires">
+
+<img src="images/imgdessins/gmetceleste.png" alt="gmetceleste" width="19%" height="19%">
+<img src="images/imgdessins/melia.png" alt="melia" width="15%" height="15%">
+<img src="images/imgdessins/maewenn.png" alt="maewenn" width="15%" height="15%">
+<img src="images/imgdessins/roi.png" alt="roi" width="15%" height="15%">
+
+
+  </div>
 
 <div class="Trident">
 
   <div class="textetrident">
     <h3>- Encore sans nom -</h3>
-    <p>Dans notre monde, un établissement scolaire se démarque des autres. Connu pour abriter les enfants de magiciens, ainsi que certains nommés Voyageurs, il forme ces jeunes gens aux périples de la vie lorsque l’on possède des pouvoirs. Ce monde magique, est régit par quatre clans, dont celui des Abysses est le chef suprême. Chaque clan possède une famille, qui instaure ses lois et ses mœurs aux autres du clan. La famille de Beaulieu est la famille régente du clan des Abysses, ainsi que de cet univers de magie. Ils supervisent deux établissements de magie, dont un lycée situé à Saumur, composé de magiciens et de sans-magie. Un établissement mixte.<br>
-      Loin de là, dans d’autres époques, vagabondes illégalement une bande de gamins surmontés tous de la même casquette, et semblent tout droit sortis d’une vieille usine. C’est le cas. Pendant la première partie du XXe siècle, en pleine révolution industrielles, ils se sont fondus au sein de la population, et travaillaient dans une grande usine réputée de la ville de Londres.<br>
-      Parmi eux, la seule jeune fille du groupe, à l’aube de ses dix-sept ans, possède la magie du voyage temporel, mais également d’autres pouvoirs, supposés être référencés, dans l’ordre des choses. Les régisseurs de la magie ne souhaitent pas d’écart, et Eléonore en fait constamment, menaçant parfois l’ordre logique des choses. Alors qu’elle est recherchée dans toutes les époques, la jeune fille décide de se jeter dans la gueule du loup et d’intégrer le lycée de magie de Saumur. Elle se considérera alors plus maligne que les autres, sachant certaines choses, supposées disparues depuis longtemps…
+    <p>Dans notre monde, un établissement scolaire se démarque des autres. Connu pour abriter les enfants de magiciens, ainsi que certains nommés Voyageurs, il forme ces jeunes gens aux périples de la vie lorsque l’on possède des pouvoirs. Ce monde magique, est régit par quatre clans, dont celui des Abysses est le chef suprême. Ils supervisent deux établissements de magie, dont un lycée situé à Saumur, composé de magiciens et de sans-magie. Un établissement mixte.<br>
+      Loin de là, dans d’autres époques, vagabonde illégalement une bande de gamins surmontés tous de la même casquette, et semblent tout droit sortis d’une vieille usine. C’est le cas.<br>
+      Parmi eux, la seule jeune fille du groupe, à l’aube de ses dix-sept ans, possède la magie du voyage temporel. Les régisseurs de la magie, qui ne souhaitent pas d’écart, et de son côté, Eléonore en fait constamment, menaçant parfois l’ordre logique des choses, est l'une des cibles du clan. Alors qu’elle est recherchée dans toutes les époques, la jeune fille décide de se jeter dans la gueule du loup et d’intégrer le lycée de magie de Saumur. Elle se considérera alors plus maligne que les autres, sachant certaines choses, supposées disparues depuis longtemps…
     </p>
   </div>
 
-<img src="images/macaron.jpg" alt="imgtest" width="30%">
+
+
+<img src="images/404.png" alt="imgtest" width="30%" height="30%">
 </div>
 
+<h3>- Les dessins de "Encore sans nom" -</h3>
+  <p>Personnages dessinés à ce jour (oui il y en a beaucoup d'autres eheh) : </p>
+
+<div class="dessinshistoires">
+
+<img src="images/imgdessins/eleonore.png" alt="eleonore" width="10%" height="10%">
+<img src="images/imgdessins/liana.png" alt="liana" width="10%" height="10%">
+<img src="images/imgdessins/leonard.png" alt="leonard" width="10%" height="10%">
+<img src="images/imgdessins/Wladimir.png" alt="wladimir" width="10%" height="10%">
+<img src="images/imgdessins/Dora.png" alt="dora" width="10%" height="10%">
+<img src="images/imgdessins/Flora.png" alt="flora" width="10%" height="10%">
+<img src="images/imgdessins/Daniella.png" alt="daniella" width="10%" height="10%">
+
+</div>
+
+   <p>Autres dessins de la même histoire :</p>
+
+<div class="dessinshistoires">
+
+  <img src="images/imgdessins/SaumurLianaEleonore.png" alt="SaumurLianaEleonore" width="44%" height="44%">
+  <img src="images/imgdessins/LianaEleonoreVoiture.jpg" alt="LianaEleonoreVoiture" width="30%" height="30%">
+
+</div>
 
 <div class="Photo">
   <h2 id="photo">• La photographie</h2>
