Ajout des musiques et corrections

--- a/Never.html
+++ b/Never.html
@@ -11,7 +11,7 @@
 
 <body> <!--corps de la page-->
   <div class="nevergonna">
-    <audio  src="images/Neversong.mp3" controls>yolo</audio>
+    <audio  src="images/sons/Neversong.mp3" controls>yolo</audio>
 
 
   </div>
