--- a/projets.html
+++ b/projets.html
@@ -169,7 +169,7 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
   </ul>
 
   <p>Le projet, lourd, conséquent, mais qui nous tient à coeur, possède comme pilier l'histoire de Blue Bird expliquée plus haut dans la rubrique L'écriture. En effet, cette histoire tend à
-  s'adapter en jeu vidéo de type Role Play Game, abrégé en RPG. Réalisé sous Python à l'heure actuelle, il est actuellement en suspend afin d'être prochainement recodé sous le langage C++</p>
+  s'adapter en jeu vidéo de type Role Play Game, abrégé en RPG. Réalisé sous Python à l'heure actuelle, il est aujourd'hui en suspend afin d'être prochainement recodé sous le langage C++</p>
 </div>
 
 <div class="videobluebird">
@@ -183,7 +183,18 @@ au moins les personnages. C'est pourquoi avec chaque résumé des histoires, j'a
 
 <p>On remarque effectivement qu'il n'y a pas grand chose pour le moment, en terme d'histoire ou bien de déplacement mais cela reste un début prometteur !</p>
 
+<h3>- Les musiques de Blue Bird  -</h3>
+<p>Pour le moment, on ne compte que deux musiques réalisées, il est vrai que cela est peu, mais plusieurs facteurs en ont décidés ainsi. De plus, il n'y en a malheureusement pas de nouvelles prévues
+à ce jour, donc il faudra se contenter de cela (｡•́︿•̀｡) <br>
+D'autre part, l'existence de musiques (même s'il n'y en a que deux ;-;) permet tout de même d'avoir un aperçu de ce que cela peut donner, ainsi qu'une petite mise dans l'ambiance (✿◠‿◠)/
+</p>
 
+<div class="musiquesjeu">
+    <p>Musique destinée normalement au menu</p>
+  <audio src="images/sons/MusiqueMenu.mp3" controls>Musique1</audio>
+    <p>Musique destinée normalement aux couloirs</p>
+  <audio src="images/sons/MusiqueCouloirs.mp3" controls>Musique2</audio>
+</div>
 
 </div>
 
